force-app/main/default/objects/vlocity_ins__FulfilmentRequestLineDecompRelationship__c/fields/vlocity_ins__DecompositionRelationshipMetadata__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DecompositionRelationshipMetadata__c</fullName>
    <description>Decomposition relationship metadata for this fulfillment request line.</description>
    <inlineHelpText>JSON code containing the decomposition relationship metadata for this fulfillment request line.</inlineHelpText>
    <label>Decomposition Relationship Metadata</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>