force-app/main/default/objects/vlocity_ins__FulfilmentRequestLineDecompRelationship__c/fields/vlocity_ins__IsConditionFailed__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsConditionFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Condition failed prevents Attributes propagation, but still allows tracing a Destination FRL created following decomposition rules (ex. Scope, Soft Cancel...)</description>
    <label>Is Condition Failed</label>
    <type>Checkbox</type>
</CustomField>