force-app/main/default/objects/vlocity_ins__FulfilmentRequestLineDecompRelationship__c/fields/vlocity_ins__SourceFulfilmentRequestLineId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SourceFulfilmentRequestLineId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SourceFulfilmentRequestLineId</description>
    <inlineHelpText>SourceFulfilmentRequestLineId</inlineHelpText>
    <label>Source Fulfilment Request Line</label>
    <referenceTo>vlocity_ins__FulfilmentRequestLine__c</referenceTo>
    <relationshipLabel>Destination Decomposition Relationships</relationshipLabel>
    <relationshipName>DestinationDecompositionRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>